-feature#0001525: add rebuild_poller_cache --host-id=[ID]
-feature#0001536: small patch to allow plugins to change the x-axis labels
-feature#0001542: Rewriting SNMP values of data queries
-feature#0001550: Record the polling time for each host to optimize polling times
-feature#0001588: Add pango-markup options to simple html markup in graphed text (title, legend etc)
-feature: jQuery "TableDnd" used for cdef item sort (courtesy Browniebraun)
-feature: jQuery "TableDnd" for Graph Template Item
-feature: jQuery "TableDnd" for Data Queries Suggested Values
-feature: Default Script Server/Script Queries now accept host specific ping_retries, max_oids
-feature: Support for new variables |host_ping_retries| and |host_max_oids|
-feature: Support changing the "Reindex Method" of associated data queries
-feature: Manage all Host Availability Options in each Host Template, derive Host options from those
-feature: Add Server Time to page headers, pay respect to user specific date/timeformats
-feature: add_device.php uses a host template like feature#0001122
-feature: Allow the enabling and disabling of a Data Source from the Data Source Edit form
-feature: Rerun already associated SNMP Queries if any SNMP related field was changed during host edit
-feature: Add Data Source Type "COMPUTE" to data templates to fully support all rrdtool-1.2.x data source types
-feature: Plugin Architecture is now part of main Cacti code
-feature: api_plugin_db_table_create allows for multi-column indices and more than one key per table
-feature: Add Tab's to the Utilities View Tech Page
-feature: Add Process Status Information to the View Tech Page
-feature: Adding multiple poller process support
-feature: Adding the site object for devices and plugins
-feature: Make reindexing and repopulating the poller cache a lossless process, reduce time to index by 66%
-feature: Add logging to the script server in case of a script crash to aid in debugging